--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
+    "sequelize-cli": "^6.6.1",
     "supertest": "^6.2.4"
   },
   "dependencies": {
@@ -43,7 +44,6 @@
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.6",
-    "sequelize-cli": "^6.6.1"
+    "sequelize": "^6.21.6"
   }
 }
